--- a/02_pandas.ipynb
+++ b/02_pandas.ipynb
@@ -732,7 +732,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Select"
+    "## Select\n",
+    "Выбор нужных колонок"
    ]
   },
   {
@@ -1180,7 +1181,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Where"
+    "## Where\n",
+    "WHERE ведет себя как фильтр строк, которые мы хотим вывести"
    ]
   },
   {
@@ -1406,7 +1408,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Group by"
+    "## Group by\n",
+    "Агрегирования с помощью GROUP BY нужны для конвертации нескольких строк в одну. При этом, во время агрегирования для разных колонок используется разная логика (сумма, среднее, количество)"
    ]
   },
   {
@@ -1843,14 +1846,15 @@
    ],
    "source": [
     "df['Year'] = df['Birth'].dt.year\n",
-    "df.groupby(['City', 'Year']).agg({'Money':np.mean, 'Name':np.ma.count}).reset_index()"
+    "df.groupby(['City', 'Year']).agg({'Money':np.mean, 'Name': np.ma.count}).reset_index()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Join"
+    "## Join\n",
+    "Операция JOIN необходима для объединения связанных данных"
    ]
   },
   {
@@ -2056,14 +2060,16 @@
     "# Задача\n",
     "\n",
     "1. Собрать данные о вакансиях c https://github.com/hhru/api (структурировать информацию).\n",
-    "2. Подсчитать различные метрики по вакансиям (придумайте сами какие).\n",
-    "3. Найти вакансии по Python. Оценить какие треубются навыки и компетенции."
+    "2. Подсчитать различные метрики по вакансиям: средняя/минимальная/максимальная з/п в зависимости от города, опыта, количества указанных скилов (придумайте еще метрики). \n",
+    "3. Найти вакансии по Python. Подсчитать среднюю з/п. Оценить какие треубются навыки и компетенции."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 132,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
